# PlatformerTest

./: .gitignore  CMakeLists.txt
include/: Bat.hpp  Bug.hpp  Coin.hpp  GameObject.hpp  Jumper.hpp  KillTrigger.hpp  Player.hpp  TextureManager.hpp  Tile.hpp  TileLoader.hpp  mathextra.hpp
include/Animation/: Animation.hpp
src/: main.cpp
src/GameObject/: Bat.cpp  Bat.hpp  Bomb.cpp  Bomb.hpp  Bomber.cpp  Bomber.hpp  Bug.cpp  Bug.hpp  Coin.cpp  Coin.hpp  GameObject.hpp  Goblin.cpp  Goblin.hpp  Jumper.cpp  Jumper.hpp  KillTrigger.cpp  KillTrigger.hpp  Player.cpp  Player.hpp  Tile.cpp  Tile.hpp
